# c4

./: Cargo.toml  flake.nix
backend/: Cargo.toml
backend/src/: lib.rs
backend/src/domains/: users.rs
backend/src/routes/: mod.rs  users.rs
frontend/: pnpm-lock.yaml
frontend/src/: App.tsx
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src/domains/: infected.rs  users.rs
src/routes/: users.rs
