[package]
name = "c4"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"]}
serde = "1.0.219"
sqlx = "0.8.6"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4", "fast-rng", "serde"] }
