# C4/Cargo.toml
[workspace]
members = [
    "backend",   
    "src-tauri", 
]
resolver = "2" 

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] } # Or specific features like "rt-multi-thread", "macros"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde", "fast-rng"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
thiserror = "1"
